# pathlib-fs

./: .coveragerc  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test-build-release.yml
pathlib_fs/: __init__.py  core.py
tests/: conftest.py  test_fs_path.py  test_mkdir.py  test_open_w.py
tests/systematic/: notes.md  test_exists.py  test_exists_is_dir_is_file.py  test_is_symlink.py  test_iterdir.py  test_mkdir.py  test_open_r.py  test_open_w.py  test_rename_unlink.py  test_touch.py
